--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -154,6 +154,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
                         android:switchMinWidth="50dp"
                         android:theme="@style/nightModeSwitch" />
 
