--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,5 @@
     <color name="notification">#13B2C3</color>
     <color name="private_account">#E6A326</color>
     <color name="security">#D95F69</color>
-    <color name="yellow1">#DCD435</color>
+    <color name="yellow1">#DFD5AF</color>
 </resources>
