--- a/app/src/main/res/layout/book_card.xml
+++ b/app/src/main/res/layout/book_card.xml
@@ -7,14 +7,13 @@
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
     android:id="@+id/bookDataCardView"
-
-
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:background="@color/material_dynamic_primary99"
         >
 
         <ImageView
@@ -33,6 +32,7 @@
 
             android:text="Title"
             android:textSize="25dp"
+            android:textStyle="bold"
 
             android:layout_toRightOf="@id/book_thumbnail"
             android:layout_marginStart="15dp"
