--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:background="@color/material_dynamic_primary95"
         >
 
         <TextView
@@ -23,6 +24,7 @@
 
             android:text="Sender Name"
             android:textSize="25dp"
+            android:textStyle="bold"
 
             android:layout_marginStart="15dp"
             />
