--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -33,30 +33,35 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/chat_nav_layout"
         >
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:id="@+id/chat_buy_btn"
 
             android:text="Buy"
-            android:layout_marginStart="100dp"
-
+            android:textStyle="bold"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/teal_200"
             />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
             android:id="@+id/chat_sell_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
 
-            android:text="Sell"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="74dp"
+            android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/chat_buy_btn"
-            android:layout_marginStart="20dp"
+            android:backgroundTint="@color/security"
+            android:text="Sell"
 
-
-            />
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
