--- a/app/src/main/res/layout/fragment_user_chat.xml
+++ b/app/src/main/res/layout/fragment_user_chat.xml
@@ -34,8 +34,7 @@
         android:id="@+id/msgList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-
+        android:background="@color/material_dynamic_primary95"
         android:layout_above="@id/sendFab"
         android:layout_below="@id/userNameLayout"
         />
@@ -43,12 +42,13 @@
     <EditText
         android:id="@+id/inputMsg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
 
         android:layout_toLeftOf="@id/sendFab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="20dp"
+        android:background="@color/white"
 
         android:hint="Message..."
         />
@@ -64,7 +64,7 @@
 
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         />
 
