--- a/app/src/main/res/layout/my_ads_card.xml
+++ b/app/src/main/res/layout/my_ads_card.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:background="@color/material_dynamic_primary95"
         >
 
         <ImageView
