--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_dynamic_primary90"
+        android:background="@color/light_blue"
         tools:context=".RegisterActivity">
 
         <LinearLayout
@@ -162,64 +162,13 @@
                         android:textSize="16sp" />
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:id="@+id/RL_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/RL_email"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/border">
-
-                    <ImageView
-                        android:id="@+id/imageViewAddress"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/baseline_location_on_24" />
-
-                    <TextView
-                        android:id="@+id/textView_register_address"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/imageViewAddress"
-                        android:padding="6dp"
-                        android:text="Address*"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"/>
-
-                    <View
-                        android:id="@+id/divider_address"
-                        android:layout_width="250dp"
-                        android:layout_height="1dp"
-                        android:layout_below="@id/textView_register_address"
-                        android:layout_centerHorizontal="true"
-                        android:background="@android:color/darker_gray" />
-
-                    <EditText
-                        android:id="@+id/editText_register_address"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/textView_register_address"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_toEndOf="@id/imageViewAddress"
-                        android:background="@android:color/transparent"
-                        android:hint="enter your address"
-                        android:inputType="text"
-                        android:minHeight="48dp"
-                        android:padding="6dp"
-                        android:textCursorDrawable="@drawable/edittextcursor"
-                        android:textSize="16sp" />
-                </RelativeLayout>
 
 
                 <RelativeLayout
                     android:id="@+id/RL_dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/RL_address"
+                    android:layout_below="@id/RL_email"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border">
 
@@ -541,7 +490,7 @@
                     android:layout_marginTop="50dp"
                     android:layout_marginBottom="50dp"
                     android:text="@string/register"
-                    android:backgroundTint="@color/material_dynamic_primary90"/>
+                    android:backgroundTint="@color/light_blue"/>
 
                 <ProgressBar
                     android:id="@+id/progressbar_reg"
