--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_dynamic_primary90"
+        android:background="@color/light_blue"
         tools:context=".ForgotPasswordActivity">
 
         <LinearLayout
@@ -122,7 +122,7 @@
                     android:text="Reset Password"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:backgroundTint="@color/material_dynamic_primary90"/>
+                    android:backgroundTint="@color/light_blue"/>
 
                 <ProgressBar
                     android:id="@+id/progressbar_forgot"
