--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <ScrollView android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LoginActivity"
-        android:background="@color/material_dynamic_primary90"
+        android:background="@color/light_blue"
         >
 
         <LinearLayout
@@ -177,7 +177,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginLeft="70dp"
                     android:layout_centerHorizontal="true"
-                    android:backgroundTint="@color/material_dynamic_primary90"
+                    android:backgroundTint="@color/light_blue"
                     android:text="Login"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
