--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -65,7 +65,7 @@
                 android:text="Book Title"
                 android:textSize="25dp"
                 android:gravity="center"
-                android:background="@color/material_dynamic_neutral99"
+                android:background="#FCFCFF"
 
                 android:layout_below="@id/imageViewPager_Card"
 
@@ -226,7 +226,7 @@
                     android:text="Book Description"
                     android:textSize="20dp"
                     android:gravity="center"
-                    android:background="@color/material_dynamic_tertiary99"
+                    android:background="#FCFCFF"
 
                     />
 
@@ -249,7 +249,7 @@
                 android:id="@+id/user_chat_btn"
 
                 android:text="Chat"
-                android:backgroundTint="@color/material_dynamic_primary90"
+                android:backgroundTint="@color/light_blue"
 
                 />
 
@@ -262,7 +262,7 @@
 
                 android:layout_toRightOf="@id/user_chat_btn"
                 android:layout_marginStart="20dp"
-                android:backgroundTint="@color/material_dynamic_primary90"
+                android:backgroundTint="@color/secondary"
 
                 />
 
