--- a/app/src/main/res/layout/fragment_user_chat.xml
+++ b/app/src/main/res/layout/fragment_user_chat.xml
@@ -34,7 +34,7 @@
         android:id="@+id/msgList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_dynamic_primary95"
+        android:background="@color/light_blue1"
         android:layout_above="@id/sendFab"
         android:layout_below="@id/userNameLayout"
         />
@@ -42,16 +42,15 @@
     <EditText
         android:id="@+id/inputMsg"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="48dp"
 
-        android:layout_toLeftOf="@id/sendFab"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
+        android:layout_toLeftOf="@id/sendFab"
         android:background="@color/white"
 
-        android:hint="Message..."
-        />
+        android:hint="Message..." />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/sendFab"
