--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="green">#00FF00</color>
     <color name="yellow">#FFC107</color>
     <color name="light_gray">#D3D3D3</color>
+    <color name="light_blue">#C1E8FF</color>
+    <color name="cream">#F9FCFF</color>
+    <color name="light_blue1">#E0F3FF</color>
 
 
     <color name="primary">#D5DAD8</color>
