main barbad hogya - Saqib

--- a/app/src/main/res/layout/book_card.xml
+++ b/app/src/main/res/layout/book_card.xml
@@ -7,6 +7,8 @@
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
     android:id="@+id/bookDataCardView"
+    app:cardBackgroundColor="@color/cream"
+
     >
 
     <RelativeLayout
