--- a/app/src/main/res/layout/my_ads_card.xml
+++ b/app/src/main/res/layout/my_ads_card.xml
@@ -6,6 +6,7 @@
     app:cardCornerRadius="15dp"
     android:layout_margin="16dp"
     android:id="@+id/myAdsCard"
+    app:cardBackgroundColor="@color/light_blue1"
 
     >
 
