--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/back_to_frag_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/back_bal"
