--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -7,6 +7,7 @@
     app:cardCornerRadius="15dp"
     android:layout_margin="16dp"
     android:id="@+id/chatListView"
+    app:cardBackgroundColor="@color/light_blue1"
 
     >
 
