--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -22,7 +22,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width  ="wrap_content"
             android:layout_height="wrap_content"
-            card_view:cardBackgroundColor="#eeeeff"
+            card_view:cardBackgroundColor="@color/yellow1"
             app:cardElevation="8dp"
             app:cardCornerRadius="20dp"
             android:layout_margin="16dp"
