--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -58,6 +58,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonEditProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
