--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -285,6 +285,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
                     android:text="Update Profile"
+                    android:backgroundTint="@color/light_blue"
                     android:textAlignment="center" />
 
                 <TextView
