--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -16,21 +16,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/light_blue"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:orientation="vertical"
-                android:background="@color/purple_700">
+                android:background="@color/teal_250">
 
                 <TextView
                     android:id="@+id/textView_update_profile_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:textColor="@color/white"
                     android:text="Update your profile"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -40,8 +42,9 @@
                     android:layout_height="wrap_content"
                     android:text="You can update your profile to stay up to date!"
                     android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:layout_marginRight="30dp"
-                    android:textColor="@color/white"
                     android:layout_marginLeft="30dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
             </LinearLayout>
@@ -78,6 +81,8 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewName"
                         android:padding="6dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Name" />
 
                     <View
@@ -128,6 +133,8 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewDoB"
                         android:padding="6dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Date of Birth (dd/mm/yyyy)" />
 
                     <View
@@ -187,6 +194,8 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewGender"
                         android:padding="6dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Gender" />
 
                     <View
@@ -250,6 +259,8 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewMobile"
                         android:padding="6dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:text="Mobile" />
 
                     <View
@@ -286,6 +297,8 @@
                     android:layout_marginTop="30dp"
                     android:text="Update Profile"
                     android:backgroundTint="@color/light_blue"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:textAlignment="center" />
 
                 <TextView
