--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:background="#eeeeef"
+            android:background="#38CDCC"
             app:menu="@menu/navigation_menu"
             app:showAsAction="always"/>
 
