--- a/app/src/main/res/layout/fragment_user_chat.xml
+++ b/app/src/main/res/layout/fragment_user_chat.xml
@@ -12,8 +12,8 @@
         android:id="@+id/userNameLayout"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:background="@color/light_gray"
         android:layout_alignParentTop="true"
-
         >
 
         <TextView
@@ -54,6 +54,7 @@
             android:id="@+id/inputMsg"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginTop="10dp"
 
             android:background="@color/white"
 
@@ -73,6 +74,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="20dp"
         />
 
 </RelativeLayout>
