--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -25,13 +25,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+
+            android:layout_marginBottom="20dp"
             android:text="username"
-            android:textSize="18dp"
             android:textColor="@color/purple_500"
-
-            android:layout_margin="20dp"
-
-            />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
 
             android:text="Message"
-            android:textSize="25dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
 
             android:layout_below="@id/tvUsername"
